# Neural-Network

./: CMakeLists.txt  README.md
data/: centralCircleLarge.csv  centralCircleSmall.csv  centralCircleSmaller.csv  delete.txt  delete2.txt  randomDataSave.txt  test1.csv
include/: AdamLayer.h  AdamOptimiser.h  CsvReader.h  DataStorage.h  Layer.h  NeuralNetwork.h  Numpty.h  NumptyHelper.h
src/: AdamLayer.cpp  AdamOptimiser.cpp  CsvReader.cpp  DataStorage.cpp  Layer.cpp  NeuralNetwork.cpp  Numpty.cpp  main.cpp
